[WED-243] Add position fixed and overflow in small resolutions

--- a/engines/wedding-atelier/app/assets/stylesheets/wedding-atelier/components/react/_select_size_modal.scss
+++ b/engines/wedding-atelier/app/assets/stylesheets/wedding-atelier/components/react/_select_size_modal.scss
@@ -1,7 +1,7 @@
 .select-size-modal {
   background: $black-transparent;
   display: none;
-  height: 100%;
+  min-height: 100vh;
   left: 0;
   position: absolute;
   top: 0;
@@ -10,6 +10,7 @@
 
   @include screen-xs {
     position: fixed;
+    overflow: auto;
   }
 
   .btnClose {
@@ -43,11 +44,12 @@
     width: 320px;
 
     @include screen-xs {
-      height: 100vh;
+      min-height: 100vh;
       left: 0;
       transform: none;
       top: 0;
       width: 100%;
+      padding: 60px 10px;
     }
 
     @include screen-sm {
